[package]
name = "mini-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#opt-level = 3
#lto = true
strip = true

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
json = "0.12.4"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
jason_to_postgres = { git = "https://github.com/2LJDC/jason_to_postgres", version = "0.3.1" }


